--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ afterEvaluate {
 }
 
 dependencies {
+  compile 'com.google.code.gson:gson:2.4'
   compile 'com.android.support:appcompat-v7:25.1.0'
   compile 'com.android.support:design:25.1.0'
   compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.6"
