--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ afterEvaluate {
 }
 
 dependencies {
+  compile 'io.reactivex.rxjava2:rxjava:2.0.2'
   compile 'com.google.code.gson:gson:2.4'
   compile 'com.android.support:appcompat-v7:25.1.0'
   compile 'com.android.support:design:25.1.0'
