Add gradle tasks for tests execution.

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,11 @@ allprojects {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
+task runUnitTests(dependsOn: [':app:testDebugUnitTest']) {
+  description 'Run all unit tests'
+}
+
+task runAcceptanceTests(dependsOn: [':app:connectedAndroidTest']) {
+  description 'Run all acceptance tests.'
+}
