--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,39 @@ android {
     test.java.srcDirs += 'src/test/kotlin'
     androidTest.java.srcDirs += 'src/androidTest/kotlin'
   }
+
+  packagingOptions {
+    exclude 'LICENSE.txt'
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/ASL2.0'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/LICENSE'
+  }
+
+  lintOptions {
+    quiet true
+    abortOnError false
+    ignoreWarnings true
+    disable 'InvalidPackage'            //Some libraries have issues with this.
+    disable 'OldTargetApi'              //Lint gives this warning but SDK 20 would be Android L Beta.
+    disable 'IconDensities'             //For testing purpose. This is safe to remove.
+    disable 'IconMissingDensityFolder'  //For testing purpose. This is safe to remove.
+  }
+
+  signingConfigs {
+    debug {
+      storeFile file('../buildsystem/debug.keystore')
+      storePassword 'android'
+      keyAlias 'androiddebugkey'
+      keyPassword 'android'
+    }
+  }
+
+  buildTypes {
+    debug {
+      signingConfig signingConfigs.debug
+    }
+  }
 }
 
 //Ensure Kotlin will not be used in production code.
