--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.5-2'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.60'
   }
 }
 
@@ -13,7 +13,7 @@ apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion 25
-  buildToolsVersion '25.0.2'
+  buildToolsVersion '26.0.2'
 
   defaultConfig {
     applicationId 'com.fernandocejas.android.sample'
@@ -74,22 +74,22 @@ afterEvaluate {
 }
 
 dependencies {
-  compile 'io.reactivex.rxjava2:rxjava:2.0.2'
-  compile 'com.google.code.gson:gson:2.4'
-  compile 'com.android.support:appcompat-v7:25.1.0'
-  compile 'com.android.support:design:25.1.0'
-  compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.6"
+  implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
+  implementation 'com.google.code.gson:gson:2.4'
+  implementation 'com.android.support:appcompat-v7:25.1.0'
+  implementation 'com.android.support:design:25.1.0'
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:1.0.6"
 
-  testCompile 'junit:junit:4.12'
-  testCompile "org.robolectric:robolectric:3.2.1"
-  testCompile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.6'
-  testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
-  testCompile "com.nhaarman:mockito-kotlin:1.1.0"
-  testCompile 'org.amshove.kluent:kluent:1.14'
+  testImplementation 'junit:junit:4.12'
+  testImplementation "org.robolectric:robolectric:3.2.1"
+  testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.0.6'
+  testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
+  testImplementation "com.nhaarman:mockito-kotlin:1.1.0"
+  testImplementation 'org.amshove.kluent:kluent:1.14'
 
-  androidTestCompile 'com.android.support.test:runner:0.5'
-  androidTestCompile 'com.android.support.test:rules:0.5'
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-  androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-  androidTestCompile 'com.android.support:support-annotations:25.1.0'
+  androidTestImplementation 'com.android.support.test:runner:0.5'
+  androidTestImplementation 'com.android.support.test:rules:0.5'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
+  androidTestImplementation 'com.android.support:support-annotations:25.1.0'
 }
