--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
   repositories {
+    google()
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.2'
+    classpath 'com.android.tools.build:gradle:3.0.0'
   }
 }
 
 allprojects {
   repositories {
+    google()
     jcenter()
   }
 }
